# Autonomous_dynamic_path_planning

./: README.md
dynamic_hybrid_path_planning/: CMakeLists.txt  package.xml
dynamic_hybrid_path_planning/config/: params.yaml
dynamic_hybrid_path_planning/include/: HybridAstar.h  State.h  dynamic_hybrid_path_planning_node.h
dynamic_hybrid_path_planning/launch/: dynamic_planning.launch.py
dynamic_hybrid_path_planning/src/: HybridAstar.cpp  dynamic_hybrid_path_planning_node.cpp
dynamic_hybrid_path_planning/version/: control.cpp  control2.cpp
global_dynamic_launcher/: CMakeLists.txt  package.xml
global_dynamic_launcher/config/: rio_voxel_ground.yaml
global_dynamic_launcher/launch/: rio_voxel_ground.launch.py  rio_voxel_ground_cluster.launch.py
graph_waypoints_creation/: CMakeLists.txt  package.xml
graph_waypoints_creation/include/: graph_waypoints_creation.h
graph_waypoints_creation/src/: graph_waypoints_creation.cpp
install/: local_setup.sh  setup.sh
install/graph_waypoints_creation/share/graph_waypoints_creation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lidar_ground_getter/config/: param.yaml
lidar_ground_getter/src/: LidarGround_version2.cpp
local_path_planning/: CMakeLists.txt  package.xml
local_path_planning/config/: params.yaml
local_path_planning/include/: HybridAstar.h  local_path_planning_node.h
local_path_planning/launch/: local_planning.launch.py
local_path_planning/src/: CubicSpline1D.cpp  Grid_map.cpp  HybridAstar.cpp  local_path_planning_node.cpp
local_path_planning/verions/: base_version.cpp  ver1.cpp  ver2.cpp  ver3.cpp  ver3.h  ver4.cpp  ver5.cpp  ver5.h
log/: latest_build
obstacle_proximity/: CMakeLists.txt  package.xml
obstacle_proximity/include/: obstacle_proximity_node.h
obstacle_proximity/src/: obstacle_proximity_node.cpp
obstacles_information_msgs/: CMakeLists.txt  package.xml
obstacles_information_msgs/msg/: Obstacle.msg  ObstacleCollection.msg
point_cloud_package/: CMakeLists.txt  package.xml
point_cloud_package/include/: point_cloud.h
point_cloud_package/src/: point_cloud.cpp
pointcloud_clustering/: CMakeLists.txt  package.xml
pointcloud_clustering/config/: pointcloud_clustering.yaml
pointcloud_clustering/include/: obstacle_detector.hpp  pointcloud_clustering_node.h
pointcloud_clustering/launch/: pointcloud_clustering.launch.py
pointcloud_clustering/src/: pointcloud_clustering.cpp
trajectory_obstacle_checker/: CMakeLists.txt  package.xml
trajectory_obstacle_checker/include/: trajectory_obstacle_checker_node.h
trajectory_obstacle_checker/launch/: trajectory_obstacle_checker.launch.py
trajectory_obstacle_checker/src/: trajectory_obstacle_checker_node.cpp
velocity_pub/: CMakeLists.txt  package.xml
velocity_pub/src/: velocity_publisher.cpp
voxel_grid_filter/src/: VoxelGrid.cpp
